@@ -1,6 +1,7 @@
 2010-07-28  Tolleiv Nietsch <nietsch@aoemedia.de> 
 
-	* Fixed issue: 15826: Non-admin fails to add new FCE to a page - pagemodule should show a warning
+	* Fixed issue: #15775: Avoid that browser-cache issues cause too much confusion during upgrade 
+	* Fixed issue: #15826: Non-admin fails to add new FCE to a page - pagemodule should show a warning
 
 2010-07-23  Tolleiv Nietsch <nietsch@aoemedia.de> 
 
